# Canoniq

./: .gitignore  CANONIQ_SPEC.md  CANONIQ_V1_REPORTFIRST_SPEC.md  LAYER1_UPDATE_INSTRUCTIONS.md  README.md  pyproject.toml
.claude/: launch.json
.github/workflows/: deploy-docs.yml
benchmark/brownfield/: __init__.py  artifacts.py  data.py  generate.py  report_pdf.py
canoniq/: cli.py  config.py  models.py  pipeline.py
canoniq/drift/: report_diff.py
canoniq/emit/: openmetadata.py
canoniq/emitters/: metricflow.py  osi.py
canoniq/evals/: brownfield.py  harness.py  tpcds_gold.py
canoniq/extract/: prose.py  report.py  tableau.py
canoniq/fingerprint/: __init__.py  catalog.py  executor.py  naming.py  solver.py  tiers.py
canoniq/ingest/: base.py  dbt_manifest.py  ddl_extractor.py  document_extractor.py  excel_extractor.py  query_log.py  warehouse.py  watcher.py
canoniq/mining/: evidence_bundle.py  signal_classifier.py  sql_extractor.py
canoniq/proposer/: llm.py  models.py
canoniq/ranking/: ontorank.py
canoniq/report/: conflict.py
canoniq/validation/: loop.py
docs/: README.md  getting-started.md  intro.md
docs/architecture/: _category_.json  data-model.md  drift-detection.md  numeric-fingerprinting.md  ontorank-trust.md  pipeline-overview.md  report-extraction.md
docs/emitters/: _category_.json  overview.md
docs/guides/: _category_.json  benchmark.md  cli-reference.md  configuration.md
examples/: canoniq.yaml.example
site/: README.md  docusaurus.config.js  package-lock.json  sidebars.js
tests/: conftest.py  test_benchmark_brownfield.py  test_bootstrap_pipeline.py  test_cli.py  test_config.py  test_conflict_report.py  test_dbt_manifest.py  test_ddl_extractor.py  test_document_extractor.py  test_drift.py  test_emitters.py  test_evidence_bundle.py  test_fingerprint.py  test_harness.py  test_ontorank.py  test_openmetadata_emit.py  test_proposer.py  test_query_log.py  test_report_extract.py  test_signal_classifier.py  test_sql_extractor.py  test_tableau_extract.py  test_validation_loop.py  test_warehouse_connector.py  test_watcher.py
(+9 files in other folders)
